proj1/tests/correct/dict2.py
d = {4:2}
print {1:[2,3,4], 2:{4:[5, d]}}
