proj1/tests/error/dict2.py
d = {1:{2:"a"}, 2:4,
